fix layout bug on homepage/upcoming battles comp

--- a/src/components/UpcomingBattles/UpcomingBattles.scss
+++ b/src/components/UpcomingBattles/UpcomingBattles.scss
@@ -10,6 +10,7 @@
   gap: 1.5rem;
   align-self: stretch;
   background: $background-2;
+  width: 100%;
   @include tablet {
     padding: 2rem 3rem;
     gap: 1.5rem;
